--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
                 <h2>🎥 Project Walkthrough</h2>
                 <p>Watch our comprehensive 2-minute analysis covering methodology, key findings, and strategic business recommendations</p>
                 <div class="video-container">
-                    <iframe src="https://www.youtube.com/embed/45NB7nAIKMs" frameborder="0" allowfullscreen></iframe>
+                    <iframe src="https://youtu.be/45NB7nAIKMs?si=ia3o3Bi_VROMDWdT" frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
 
